Audit round 7: milestoning semantics, dyna conformance, harness honesty
Three adversarial auditors over 62b313fa..a5f8c966 (the 8-hour burn arc);
every confirmed finding fixed, none defended.

MILESTONING (silent wrongness, all four fixed):
- dimension by CLASS temporal stereotype (new ModelContext
  .findClassDefinition; engine milestoningCanSupportTemporalStrategy) —
  the table's block layout no longer picks which columns filter
- %latest uses the table-declared INFINITY_DATE and is LOUD without one
  (engine getInfinityDate asserts; the 9999-12-31 hardcode is gone);
  Milestoning record redesigned as Business/Processing blocks carrying
  snapshotDate, infinityDate and the inclusivity flags, parser captures
  date/boolean values instead of skipping them
- THRU/OUT_IS_INCLUSIVE flips the boundary operators (from < d AND
  thru >= d), engine getTemporalMilestoneFilter parity
- temporal-class fetch without a date and navigation to a milestoned
  target are loud interim walls (engine propagates the fetch date to
  EVERY milestoned table; filtering only the root multiplies rows)

RESOLVER/LOWERING:
- size()/count() over a ~distinct mapping counted SELECT DISTINCT 1
  (one row); deferral now requires a colspec that reads the row
- COLLECTION results drop NULL cells (pure collections hold no empties)
- filteredNavLeafRead: first()/head() emit LIMIT 1 (toOne raised on >1);
  bare [*] reads fall through loud; exact toOne/first/head FQNs
- every endsWith FQN match in resolver/checkers replaced with exact
  identification; cmpCall overloads pinned by (Date,Date) param types
- collectSlotReads gains the lambda shadow-stop

DYNAFUNCTION CONFORMANCE (vs real h2Extension2_1_214.pure):
- convertTimeZone shifted the WRONG DIRECTION (double offset); now
  timezone(tz, timezone('UTC', dt)) — DuckDB-verified 09:00 Tokyo
- isNumeric pinned to the engine's H2 emission lower(x)=upper(x)
- dayOfWeekNumber 1-arg is SUNDAY-based (DAY_OF_WEEK); 2-arg accepts
  Sunday|Monday (mod(isodow,7)+